[project]
name = "comfyui-othervaes"
description = "Nodes: TAESD VAE Decode"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/M1kep/ComfyUI-OtherVAEs"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-OtherVAEs"
Icon = ""
